--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ui",
   "version": "1.0.0",
-  "main": "./Button.tsx",
-  "types": "./Button.tsx",
+  "main": "./index.ts",
+  "types": "./index.ts",
   "license": "MIT"
 }
